--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@
 body {
     width: 100vw;
     height: 100svh;
+    background-color: rgb(234, 234, 234);
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    align-self: center;
 }
 
 .soundboard {
@@ -15,21 +22,23 @@ body {
     gap: 10px;
     width: 100%;
     aspect-ratio: 3/4;
-    background-color: rgb(248, 248, 64);
+    
     max-width: 400px;
 }
 
 .sound-tile {
     border-radius: 50%;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(148, 239, 255);
-    padding: 40px;
+    background-color: rgb(44, 158, 245);
+    box-shadow: inset -6.5rem -5rem 0px -4rem  rgba(0, 0, 0, 0.164);
     background-size: 60%;
     background-position: center;
     background-repeat: no-repeat;
     cursor: pointer;
     border: none;
+}
+
+.sound-tile img {
+    width: 75px
 }
 
 .lion {
